--- a/src/components/navbar/mainMenu/_mainMenu.module.scss
+++ b/src/components/navbar/mainMenu/_mainMenu.module.scss
@@ -7,13 +7,15 @@
   left:0;
   height: 100vh;
   z-index: 994;
-  padding-top: 80px;
+  padding-top: $navbar-height;
   .mainMenuInner {
-    display: block;
-    padding: .5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 100vw;
+    height: calc(100vh - #{$navbar-height});
     text-align: center;
     position: relative;
-    max-width: $navbar-max-width;
     margin: auto;
     
     &.active {
@@ -28,14 +30,16 @@
       flex: 1 1 0%;
     }
     a {
-      display:block;
+      display:flex;
+      align-items: center;
+      justify-content: center;
       border:none;
       text-transform: uppercase;
       text-decoration: none;
-      padding: 10px 15px;
       text-align: center;
       cursor: pointer;
       color: #fff;
+      box-shadow: inset 0 0px 1px rgba(255, 255, 255, 0.3);
       h1 {
         color: #fff;
         margin: 1rem 0;
@@ -47,6 +51,10 @@
       &:hover {
         background-color: rgba(255,255,255,0.1);
       }
+    }
+    @include sm {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
     }
   }
 }
